Sale deifning aletsr